# ihmc-msgs

./: .pre-commit-config.yaml  CMakeLists.txt  package.xml
include/ihmc_msgs/: conversions.h  solver_statistics_publisher.h  solver_statistics_subscriber.h  solver_trajectory_publisher.h  solver_trajectory_subscriber.h  whole_body_state_publisher.h  whole_body_state_subscriber.h  whole_body_trajectory_publisher.h  whole_body_trajectory_subscriber.h
msg/: CapturabilityBasedStatus.msg  Control.msg  SolverTrajectory.msg
script/: flat_ground_bag.py
src/: crocoddyl_ros.cpp
unittest/: test_solver_statistics.py  test_solver_trajectory.py  test_whole_body_state.py  test_whole_body_trajectory.py
