<?xml version="1.0"?>
<package format="3">
  <name>ihmc_msgs</name>
  <version>1.0.0</version>
  <description>
    Message structures needed to interact with Crocoddyl solvers, inputs and outputs. Compatibility with ROS1 and ROS2.
  </description>

  <maintainer email="jfoster@ihmc.org">James Foster</maintainer>
  <author email="jfoster@ihmc.org">James Foster</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- build and runtime dependencies -->
  <depend>ros_environment</depend>
  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>whole_body_state_msgs</depend>
  <depend>controller_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>pybind11_vendor</depend>
  <depend>pinocchio</depend>

  <!-- build dependencies -->
  <build_depend>rclpy</build_depend>

  <!-- runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
